added fully support in create shop started shop page improved navbar